chỉnh sửa my account

--- a/BaiTapLon-HCJ/css/style-achoo.css
+++ b/BaiTapLon-HCJ/css/style-achoo.css
@@ -2,6 +2,9 @@
     height: 220px;
     background: #827161;
 }
+.footer-content-achoo{
+    height: 220px;
+}
 .navbar-content-achoo{
     background-image: url('../img-achoo/navbar-content.jpg');
     height: 117px;
