--- a/BaiTapLon-HCJ/css/style.css
+++ b/BaiTapLon-HCJ/css/style.css
@@ -1,209 +1,299 @@
-*{
-	margin: 0;
-	padding: 0;
+* {
+    margin: 0;
+    padding: 0;
 }
+
 .info-bar {
-	background: #5a4a3b;
-	width: 100%;
+    background: #5a4a3b;
+    width: 100%;
+    padding-right: 15px;
 }
 
-.social{
-	display: inline-block;
-	width: 27px;
-	height: 40px;
-	text-align: center;
+.social {
+    display: inline-block;
+    width: 27px;
+    height: 40px;
+    text-align: center;
 }
+
 .social i {
-	margin-top: 13px;
-	color: #9b9997; 
-	font-size: 15px;
-}
-.social:hover{
-	background: #88c442;
+    margin-top: 13px;
+    color: #9b9997;
+    font-size: 15px;
 }
 
-.info-head{
-	font-family: Montserrat;
-	font-size: 12px;
-	color:  #a3d865;
-	margin-left: 10px; 
+.social:hover {
+    background: #88c442;
 }
 
-.info-head span{
-	color: white;
+.info-head {
+    font-family: Montserrat;
+    font-size: 12px;
+    color: #a3d865;
+    margin-left: 10px;
 }
 
-.right{
-	float: right;
+.info-head span {
+    color: white;
 }
 
-.dropdown a{
-	text-decoration: none;
-	color: #fff;
+
+.dropdown a {
+    text-decoration: none;
+    color: #fff;
 }
 
-.dropdown-menu{
-	background: rgba(136, 196, 66, 0.5);
+.dropdown-menu {
+    background: rgba(136, 196, 66, 0.5);
 }
 
-.dropdown , .dropdown-menu{
-	font-family: Montserrat;
-	font-size: 12px;
+.dropdown,
+.dropdown-menu {
+    font-family: Montserrat;
+    font-size: 12px;
 }
 
-.dropdown{
-	float: right;
-	display: inline-block;
-	height: 100%;
-	margin-right: 15px;
-	padding: 10px 10px;
+.dropdown {
+    float: right;
+    display: inline-block;
+    height: 100%;
+    margin-right: 15px;
+    padding: 10px 10px;
 }
 
-.dropdown:hover{
-	background: #88c442;
+.dropdown:hover {
+    background: #88c442;
 }
 
 .unit-menu {
-	min-width: 50px;
+    min-width: 50px;
 }
 
 .icon {
-	margin-top: 60px;
+    margin-top: 60px;
 }
 
-.logo{
-	display: block;
-  	margin-left: auto;
-  	margin-right: auto;
-  	margin-bottom: 40px;
-}
-.logo-box{
-	margin-top: 40px;
+.logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 40px;
 }
 
-.menu a{
-	text-decoration: none;
-	color: #5a5652;
-	margin-right: 35px;
-}
-.menu a:hover{
-	color: #88c442;
+.logo-box {
+    margin-top: 40px;
 }
 
-#btn-collapse{
-	background-color: #add253;
+.menu a {
+    text-decoration: none;
+    color: #5a5652;
+    margin-right: 35px;
 }
-#navbarSupportedContentXL{
-	margin-top: 10px; 
+
+.menu a:hover {
+    color: #88c442;
 }
-.parent{
+
+#btn-collapse {
+    background-color: #add253;
+}
+
+#navbarSupportedContentXL {
+    margin-top: 10px;
+}
+
+.parent {
+    position: relative;
+}
+
+.child {
+    position: absolute;
+    top: -10px;
+    left: 10px;
+}
+
+.icon img {
+    margin-right: 10px;
+}
+
+footer {
+    background: #5a4a3b;
+    width: 100%;
+    padding-top: 1px;
+    margin-top: 50px;
+}
+
+.footer-title {
+    /* height: 100px; */
+    background: #add253;
+    padding: 20px 20px 0px 20px;
+    margin-top: -50px;
+}
+
+.footer-content {
+    margin-top: 105px;
+}
+
+.info p {
+    font-family: Montserrat;
+    font-size: 14px;
+    color: #add253;
+    margin-top: 3px;
+}
+
+.footer-title h2 {
+    font-family: Montserrat;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 10px;
+    margin-top: 15px;
+}
+
+.footer-title p {
+    font-family: Montserrat;
+    font-size: 14px;
+}
+
+.center-link {
+    margin-top: 20px;
+}
+
+.center-link h3 {
+    color: #add253;
+    margin-bottom: 30px;
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.center-link ul li {
+    list-style: none;
+}
+
+.center-link ul li a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 15px;
+    font-family: Montserrat;
+    line-height: 36px;
+}
+
+.social-end {
+    display: block;
+    text-align: center;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.social-end-link {
+    color: #7b6e62;
+    font-size: 18px;
+    margin-right: 15px;
+    text-align: center;
+}
+
+.social-end-link:hover {
+    color: #7b6e62;
+    font-size: 18px;
+    display: inline-block;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    background-color: #add253;
+}
+
+.payment {
+    display: block;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.copyright p {
+    color: #fff;
+    font-family: Montserrat;
+    font-size: 12px;
+}
+
+.copyright span {
+    color: #add253;
+    font-family: Montserrat;
+    font-size: 12px;
+}
+
+.slick-prev:before,
+.slick-next:before {
+    color: #928a83;
+    font-size: 50px;
+}
+
+.slick-prev:hover:before,
+.slick-next:hover:before {
+	color: #88c442 !important;
+}
+
+.slick-prev {
+    left: 50px;
+    z-index: 1000000;
+}
+
+.slick-next {
+    right: 70px;
+    z-index: 100000;
+}
+
+.slider img {
+    width: 100%;
+    height: 673px;
+}
+.slide{
 	position: relative;
 }
-.child{
-	position:  absolute;
-	top:  -10px;
-	left: 10px;
+
+.slide-text{
+	width: 80%;
+	height: 50%;
+	/* overflow: auto; */
+	margin: auto;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	text-align: center;
 }
 
-.icon img{
-	margin-right: 10px;
+
+.collection {
+	margin-top: -90px;
 }
-footer{
-	background: #5a4a3b;
+
+
+.collection-item{
+	text-align: center;
+}
+.collection a{
+	color: #848484;
+}
+.collection p{
+	font-family: Frente H1;
+	font-size: 60px;
+	color: #97be8d;
+	margin-bottom: 0px;
+}
+
+.collection span{
+	color: #5a4a3b;
+}
+.collection-item img{
 	width: 100%;
-	padding-top: 1px;
-	margin-top: 50px;
 }
 
-.footer-title{
-	/* height: 100px; */
-	background: #add253;
-	padding: 20px 20px 0px 20px;
-	margin-top:  -50px;
-}
 
-.footer-content{
-	margin-top: 105px;
-}
-.info p {
-	font-family: Montserrat;
-	font-size: 14px;
-	color: #add253;
-	margin-top: 3px;
-} 
 
-.footer-title h2{
-	font-family: Montserrat;
-	font-size: 20px;
-	font-weight: bold;
-	line-height: 10px;
-	margin-top: 15px;
-}
-
-.footer-title p{
-	font-family: Montserrat;
-	font-size: 14px;
-}
-.center-link {
-	margin-top: 20px;
-}
-
-.center-link h3{
-	color: #add253;
-	margin-bottom: 30px;
-	font-family: Montserrat;
-	font-size: 18px;
-	font-weight: bold;
-}
-.center-link ul li{
-	list-style: none;
-}
-.center-link ul li a{
-	text-decoration: none;
-	color:  #fff;
-	font-size: 15px;
-	font-family: Montserrat;
-	line-height: 36px;
-}
-
-.social-end{
-	display: block;
-	text-align: center;
-	margin-top: auto;
-	margin-bottom: auto;
-}
-
-.social-end-link{
-	color: #7b6e62;
-	font-size: 18px;
-	margin-right: 15px;
-	text-align: center;
-}
-.social-end-link:hover {
-	color: #7b6e62;
-	font-size: 18px;
-	display: inline-block;
-	height: 30px;
-	width: 30px;
-	border-radius: 50%;
-	background-color: #add253;
-}
-
-.payment{
-	display: block;
-	margin-top: auto;
-	margin-bottom: auto;
-}
-
-.copyright p{
-	color: #fff;
-	font-family: Montserrat;
-	font-size: 12px;
-}
-
-.copyright span{
-	color: #add253;
-	font-family: Montserrat;
-	font-size: 12px;
-}
-
+/* @media only screen and (min-width: 600px) {
+    .dropdown-menu{
+      position:fixed !important;
+      right: 0;
+      left: auto;
+    }
+} */
