--- a/BaiTapLon-HCJ/css/style-achoo.css
+++ b/BaiTapLon-HCJ/css/style-achoo.css
@@ -39,6 +39,9 @@
 .no-margin{
     margin: 0px;
 }
+.main-achoo{
+    padding: 20px;
+}
 .my-account-main-achoo{
     padding-top: 40px;
     padding-left: 50px;
@@ -236,48 +239,16 @@ input.asterisk{
 /* STYLE FAQ */
 .faq-title-achoo{
     font-family: "Montserrat medium";
-    font-size: 20px;
+    font-size: 18px;
     color: #4a4642;
+}
+.faq-content-achoo{
+    font-family: "Montserrat";
+    color: #76716d;
 }
 .faq-hide-achoo{
     background: #ffffff;
 }
 .faq-show-achoo{
-    background: #f1f1f1;
-}
-.faq-hide2-achoo{
-    background: #ffffff;
-}
-.faq-show2-achoo{
-    background: #f1f1f1;
-}
-.faq-hide3-achoo{
-    background: #ffffff;
-}
-.faq-show3-achoo{
-    background: #f1f1f1;
-}
-.faq-hide4-achoo{
-    background: #ffffff;
-}
-.faq-show4-achoo{
-    background: #f1f1f1;
-}
-.faq-hide5-achoo{
-    background: #ffffff;
-}
-.faq-show5-achoo{
-    background: #f1f1f1;
-}
-.faq-hide6-achoo{
-    background: #ffffff;
-}
-.faq-show6-achoo{
-    background: #f1f1f1;
-}
-.faq-hide7-achoo{
-    background: #ffffff;
-}
-.faq-show7-achoo{
     background: #f1f1f1;
 }
